# my-own-redis

./: README.md  pyproject.toml
my_own_redis/resp/: __init__.py  deserializer.py  serializer.py
my_own_redis/server/: my-redis.py
src/resp/: deserializer.py  serializer.py
src/server/: my-redis.py
tests/: test_deserializer.py  test_resp.py  test_serializer.py
