[tool.poetry]
name = "my-own-redis"
version = "0.1.0"
description = ""
authors = ["rojoyin <rojoyin@gmail.com>"]
readme = "README.md"
packages = [{include = "my_own_redis"}]

[tool.poetry.dependencies]
python = "^3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
